Minor warnings cleanup