@@ -66,7 +66,7 @@ public class ObjectMapperModuleTest
 
         final ObjectMapper mapper = injector.getInstance(ObjectMapper.class);
 
-        Assert.assertEquals(mapper.writeValueAsString(new Integer(10)), "\"A\"");
+        Assert.assertEquals(mapper.writeValueAsString(Integer.valueOf(10)), "\"A\"");
     }
 
     @Test
@@ -78,7 +78,7 @@ public class ObjectMapperModuleTest
 
         final ObjectMapper mapper = injector.getInstance(ObjectMapper.class);
 
-        Assert.assertEquals(mapper.writeValueAsString(new Integer(10)), "\"A\"");
+        Assert.assertEquals(mapper.writeValueAsString(Integer.valueOf(10)), "\"A\"");
     }
 
     @Test
@@ -98,7 +98,7 @@ public class ObjectMapperModuleTest
 
         final ObjectMapper mapper = injector.getInstance(ObjectMapper.class);
 
-        Assert.assertEquals(mapper.writeValueAsString(new Integer(10)), "\"A\"");
+        Assert.assertEquals(mapper.writeValueAsString(Integer.valueOf(10)), "\"A\"");
     }
 
     @Test
@@ -120,7 +120,7 @@ public class ObjectMapperModuleTest
 
         final ObjectMapper mapper = injector.getInstance(ObjectMapper.class);
 
-        Assert.assertEquals(mapper.writeValueAsString(new Integer(10)), "\"A\"");
+        Assert.assertEquals(mapper.writeValueAsString(Integer.valueOf(10)), "\"A\"");
     }
 
     @Test
@@ -132,7 +132,7 @@ public class ObjectMapperModuleTest
 
         final ObjectMapper mapper = injector.getInstance(ObjectMapper.class);
 
-        Assert.assertEquals(mapper.writeValueAsString(new Integer(10)), "\"A\"");
+        Assert.assertEquals(mapper.writeValueAsString(Integer.valueOf(10)), "\"A\"");
     }
 
     private static class SomeBean
